--- a/Weather App/weather.html
+++ b/Weather App/weather.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./stylew.css">
   <title>Weather App</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
     </form>
     <main id="main">
     </main>
-  <script src="./script.js"></script>
+  <script src="./weather.js"></script>
 </body>
 </html>
